--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -129,6 +129,8 @@ width:100%;
         text-align: center;
         font-size: 0.7rem;
         color: black;
+        display: inline-block;
+        width: 100%;
     }
 }
 
