--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -51,9 +51,15 @@ $theme-color:   $grey-color-dark;
 
  html {
     background-color: $offwhite;
+    height: 100%;
+    margin: 0;
+    padding: 0;
  }
 
 body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
     font-family: $base-font-family;
     font-size: $base-font-size;
     line-height: $base-line-height;
