--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -65,7 +65,7 @@ body {
     line-height: $base-line-height;
     font-weight: 100;
     color: $text-color;
-    background-color: $background-color;
+    background-color: $offwhite;
     -webkit-text-size-adjust: 100%;
 }
 
