--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,9 +3,12 @@ layout: default
 ---
 <div class="wrapper">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <h5 class="post-description">{{ page.description }}</h5>
+  <header class="header-bar">
+    <h1>{{ page.title }}</h1>
+    <h5>{{ page.description }}</h5>
+    <br>
+    <hr>
+    <br>
   </header>
 
   <article class="post-content">
