--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,9 +20,9 @@
           <a class="page-link" href="/portfolio">
             <h4>Portfolio</h4>
           </a>
-          <a class="page-link" href="/blog">
+          <!--a class="page-link" href="/blog">
             <h4>Blog</h4>
-          </a>
+          </a-->
           <a class="page-link" href="/contact">
             <h4>Contact</h4>
           </a>
