--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="{{ site.description }}">
 
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon"> 
 	
     <!--JQ-->
 	<script
