--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
 
-  <a class="site-title" href="/{{ site.baseurl }}"><img src="/img/bluebirdl.svg" width="40px" height="32x"></img><h3>{{ site.title }}</h3></a>
+  <!--a class="site-title" href="/{{ site.baseurl }}"><img src="/img/bluebirdl.svg" width="40px" height="32x"></img><h3>{{ site.title }}</h3></a-->
 
     <nav class="site-nav">
 
