--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -3,18 +3,15 @@
  * Site header   **********************************************************
  */
 .site-header {
-    border-bottom: 1px solid $grey-color-light;
     background-color: #fff;
-    opacity: 0.75;
-    position:fixed;
-    left:0px;
-    top:0px;
-    //height:56px;
-    width:100%;
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 76%;
+    margin: 0px 12%;
     z-index: 50;
     text-align: center;
-    background-color: $offwhitedark;
-    display: inline-block;
+    background-color: #021a13;
     .site-title {
         float: left;
         padding-left: 20%;
@@ -43,15 +40,17 @@ text-decoration: none;
 color: $theme-color;
     }
 }
+
 .site-nav {
-float: right;
-padding-right: 20%;
+//float: right;
 line-height: $nav-height;
 display:inline-block;
+padding-top:10px;
 .page-link{
     margin-right: 5px;
     display: inline-block;
     line-height: $base-line-height;
+    font-size: 22px;
         // Gaps between nav items, but not on the first one
 &:not(:first-child) {
 margin-left: 15px;
@@ -125,21 +124,21 @@ display: inline-block;
  * Site footer  **********************************************************
  */
 .site-footer {
-//border-top: 1px solid $grey-color-dark;
-font-size: 10px;
-background-color: $beige;//$grey-color-dark;
-padding: 2px;
-color: #333;//#aaa;
-position:fixed;
-left:0px;
-bottom:0px;
-height:25px;
-opacity: 0.5;
-width:100%;
+    font-size: 10px;
+    background-color: #021a13;
+    padding: 5px;
+    color: $text-color;
+    position: fixed;
+    left: 0px;
+    bottom: 0px;
+    height: 40px;
+    opacity: 1;
+    width: 76%;
+    margin: 0px 12%;
     div p {
         text-align: center;
         font-size: 0.7rem;
-        color: black;
+        color: #dadada;
         display: inline-block;
         width: 100%;
     }
@@ -165,9 +164,56 @@ color: $theme-color;
 /**
  * Page content   **********************************************************
  */
+
+.sign {
+    width: 100vw;
+    height: 100vh;
+    background: url("/img/kalei.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    top: 0;
+    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 2s; /* Firefox < 16 */
+        -ms-animation: fadein 2s; /* Internet Explorer */
+         -o-animation: fadein 2s; /* Opera < 12.1 */
+            animation: fadein 2s;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
 .page-content {
-    background-color: $offwhite;
-padding: 100px 0; /* VERTICAL PADDING FOR TITLE ON EVERY PAGE */
+    background-color: #021a13;//$offwhite;
+
+    //background-color: $green-light;//$offwhite;
+    padding: 100px 0; /* VERTICAL PADDING FOR TITLE ON EVERY PAGE */
 }
 .page-heading {
 font-size: 20px;
@@ -391,4 +437,20 @@ form .uploadcare-widget{
 .flat-button:hover, .uploadcare-widget-button:hover, .uploadcare-widget-button-cancel:hover{
     background: #c9c9c9;
     text-decoration: none;
+}
+
+
+//HOME
+.home-page-content {
+    font-size: 10px;
+    background-color: #021a13;
+    padding: 5px;
+    color: #fefefe;
+    position: fixed;
+    left: 0px;
+    bottom: 0px;
+    height: 100vh;
+    opacity: 1;
+    width: 76%;
+    margin: 0px 12%;
 }
