--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,19 +11,19 @@
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
           {% endif %}
         {% endfor %}-->
-          <a class="page-link" href="/">
+          <a class="page-link" id="home" href="/">
             <h4>Home</h4>
           </a>
-          <a class="page-link" href="/about">
+          <a class="page-link" id="about" href="/about">
             <h4>About</h4>
           </a>
-          <a class="page-link" href="/portfolio">
+          <a class="page-link" id="portfolio" href="/portfolio">
             <h4>Portfolio</h4>
           </a>
           <!--a class="page-link" href="/blog">
             <h4>Blog</h4>
           </a-->
-          <a class="page-link" href="/contact">
+          <a class="page-link" id="contact" href="/contact">
             <h4>Contact</h4>
           </a>
 
