--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,16 +9,15 @@
 
     {% include header.html %}
 
-	<div class="sign">
-	</div>
-	
+	<!--div class="sign">
+	</div-->
+
     <div class="home-page-content">
-      <div class="wrapper">
+      <div class="wrapper home-wrapper reveal-full-size">
         {{ content }}
       </div>
     </div>
-
-    {% include footer.html %}
+    {% include footer-visable-short.html %}
 
   </body>
 
