--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,7 @@ layout: default
 
   <header class="header-bar">
     <h1>{{ page.title }}</h1>
-    <h5>{{ page.description }}</h5>
+    <h5 style="margin-top: 25px;">{{ page.description }}</h5>
     <br>
     <hr>
     <br>
