BAck to light theme

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,10 +12,8 @@
 	<!--div class="sign">
 	</div-->
 
-    <div class="home-page-content">
-      <div class="wrapper home-wrapper reveal-full-size">
+    <div class="home-page-content reveal-full-size">
         {{ content }}
-      </div>
     </div>
     {% include footer-visable-short.html %}
 
