--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,7 +35,7 @@
 	
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Roboto+Slab" rel="stylesheet"> 
     <!-- The best place for this one is your <HEAD> tag -->
 	<script>UPLOADCARE_PUBLIC_KEY = "22ef18bc9c6ea027ce4d";</script>
 	<script src="https://ucarecdn.com/libs/widget/2.10.2/uploadcare.full.min.js" charset="utf-8"></script>
