--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,11 @@
 <header>
-  <nav class="navbar navbar-inverse bg-inverse navbar-toggleable-md fixed-top">
+  <nav class="navbar navbar-light bg-faded navbar-toggleable-md fixed-top">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon">
     </button>
-    <a class="navbar-brand" href="#"></a>
+    <a class="navbar-brand" href="/">
+        <img src="/img/bluebirdl.svg" height="32x" width="40px">S & R Creations</span>
+    </a>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link" id="home" href="/">Home</a>
