--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -549,11 +549,33 @@ form * {
     }
 
     .navbar-nav {
-        margin: auto;
+        margin-left: 26%;
+    }
+}
+
+.navbar-brand {
+        font-family: 'Lora', serif;
+        color: #333 !important;
+        padding: 0.2em 1em  !important;
+        font-weight: 100 !important;
+        font-size: 20px !important;
+        float:left;
+        margin-left: 20%;
+        img {
+            opacity: 0.5;
+            margin-right: 10px;
+        }
+}
+
+@media screen and (max-width: 980px) {
+    .navbar-brand {
+        float:left;
+        margin-left: 0px;
     }
 }
 
 @media screen and (max-width: 1090px) {
+
     .home-page-content, .site-footer, #contactform, .navbar, header, nav, .navbar-nav {
         //opacity: 1;
         width: 100% !important;
