--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,6 +12,9 @@
 	<!--div class="sign">
 	</div-->
 
+<div class="header-image">
+  <h1 class="reveal-full-size"> S & R<br>Creations</h1>
+</div>
     <div class="home-page-content reveal-full-size">
         {{ content }}
     </div>
